fix: 깨지는 테스트 고친다